--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>E-School Website</title>
+    <!-- fontawesome link  -->
+    <script src="https://kit.fontawesome.com/20bb288a86.js" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- main css link  -->
@@ -12,6 +14,7 @@
     
   </head>
   <body>
+    <!-- header start here  -->
     <header class="header-section">
         <div class="container">
             <div class="row">
@@ -56,7 +59,124 @@
             </div>
         </div>
     </header>
-
+<!-- header end here  -->
+<!-- book section start here  -->
+<section class="book-section pt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <div class="books-item">
+          <div class="book-img">
+            <img class="img-fluid" src="images/book1.png" alt="">
+          </div>
+          <h2>1500+ Topic</h2>
+          <p>Learn Anythings</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="books-item">
+          <div class="book-img">
+            <img class="img-fluid" src="images/book2.png" alt="">
+          </div>
+          <h2>1800+ Students</h2>
+          <p>Learn Anythings</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="books-item">
+          <div class="book-img">
+            <img class="img-fluid" src="images/book3.png" alt="">
+          </div>
+          <h2>9K+ Test Token</h2>
+          <p>Learn Anythings</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="books-item">
+          <div class="book-img">
+            <img class="img-fluid" src="images/book4.png" alt="">
+          </div>
+          <h2>2000+ Student</h2>
+          <p>Learn Anythings</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- book section end here  -->
+<!-- course section start here  -->
+<section class="course-section py-5 my-5">
+  <div class="container">
+    <div class="row pb-5 mb-4">
+      <div class="col text-center">
+        <h1>Online Courses</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="courses-item">
+          <div class="course-img">
+            <img class="img-fluid" src="images/course1.png" alt="">
+          </div>
+          <h2>Modern Psychology</h2>
+          <p>Designation</p>
+          <a class="btn rounded-pill btn-style px-4 text-white" href="">Buy Course</a>
+          <div class="row justify-content-between align-items-center pt-4 mt-2">
+            <div class="col-md-8 d-flex align-items-center">
+              <i class="far fa-calendar-alt pe-2"></i>
+              <h3>Start 20 April, 2021</h3>
+            </div>
+            <div class="col-md-4 d-flex align-items-center">
+              <i class="fas fa-user-friends pe-2"></i>
+              <h3>60 seats</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="courses-item">
+          <div class="course-img">
+            <img class="img-fluid" src="images/course2.png" alt="">
+          </div>
+          <h2>Modern Psychology</h2>
+          <p>Designation</p>
+          <a class="btn rounded-pill btn-style px-4 text-white" href="">Buy Course</a>
+          <div class="row justify-content-between align-items-center pt-4 mt-2">
+            <div class="col-md-8 d-flex align-items-center">
+              <i class="far fa-calendar-alt pe-2"></i>
+              <h3>Start 20 April, 2021</h3>
+            </div>
+            <div class="col-md-4 d-flex align-items-center">
+              <i class="fas fa-user-friends pe-2"></i>
+              <h3>60 seats</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="courses-item">
+          <div class="course-img">
+            <img class="img-fluid" src="images/course3.png" alt="">
+          </div>
+          <h2>Modern Psychology</h2>
+          <p>Designation</p>
+          <a class="btn rounded-pill btn-style px-4 text-white" href="">Buy Course</a>
+          <div class="row justify-content-between align-items-center pt-4 mt-2">
+            <div class="col-md-8 d-flex align-items-center">
+              <i class="far fa-calendar-alt pe-2"></i>
+              <h3>Start 20 April, 2021</h3>
+            </div>
+            <div class="col-md-4 d-flex align-items-center">
+              <i class="fas fa-user-friends pe-2"></i>
+              <h3>60 seats</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- course section end here  -->
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
