--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- header start here  -->
     <header class="header-section">
         <div class="container">
-            <div class="row">
+            <div class="row pt-2">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
                       <a class="navbar-brand banner-img" href="#"><img class="img-fluid" src="images/logo.png" alt=""></a>
@@ -27,19 +27,19 @@
                       <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Books</a>
+                            <a class="nav-link menu" aria-current="page" href="#">Books</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">Courses</a>
+                            <a class="nav-link menu" href="#">Courses</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">Others</a>
+                            <a class="nav-link menu" href="#">Others</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">Blog</a>
+                            <a class="nav-link menu" href="#">Blog</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link btn rounded-pill btn-style text-white px-3 py-1" href="#">Sign in</a>
+                            <a class="nav-link btn rounded-pill btn-style text-white px-3 ms-2 py-2" href="#">Sign in</a>
                           </li>
                         </ul>
                       </div>
@@ -177,6 +177,79 @@
   </div>
 </section>
 <!-- course section end here  -->
+<!-- testimonial section start  -->
+<section class="testimonial-section py-5 my-5">
+  <div class="container">
+    <div class="row pb-5 mb-4">
+      <div class="col text-center">
+        <h1>Testimonial</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-8 m-auto">
+        <div class="row align-items-center">
+          <div class="col-3">
+            <div class="testimonial-img">
+              <img class="img-fluid" src="images/profile.png" alt="">
+            </div>
+          </div>
+          <div class="col-9">
+            <p>There are many variations of passages of Lorem Ipsum available, but the
+              majority have suffered alteration in some form, by injected humour, 
+             or randomised words which don't look even slightly believable.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- testiomonial section end  -->
+<!-- footer start  -->
+<footer class="footer-section ">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <p>Millions of people of all ages and from around the world are improving their lives with us</p>
+      </div>
+      <div class="col-md-2 ms-auto">
+        <ul>
+          <li><h2>Course</h2></li>
+          <li><a href="">Graphic Design</a></li>
+          <li><a href="">Web Design</a></li>
+          <li><a href="">Business</a></li>
+          <li><a href="">Marketing</a></li>
+          <li><a href="">Engineering</a></li>
+        </ul>
+      </div>
+      <div class="col-md-2">
+        <ul>
+          <li><h2>Terms</h2></li>
+          <li><a href="">Graphic Design</a></li>
+          <li><a href="">Web Design</a></li>
+          <li><a href="">Business</a></li>
+          <li><a href="">Marketing</a></li>
+          <li><a href="">Engineering</a></li>
+        </ul>
+      </div>
+      <div class="col-md-2">
+        <ul>
+          <li><h2>Useful Link</h2></li>
+          <li><a href="">Graphic Design</a></li>
+          <li><a href="">Web Design</a></li>
+          <li><a href="">Business</a></li>
+          <li><a href="">Marketing</a></li>
+          <li><a href="">Engineering</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <p class="text-center p-0 m-0 pt-5">Copyright © 2020 www.com</p>
+      </div>
+    </div>
+  </div>
+</footer>
+<!-- footer end  -->
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
