--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- main css link  -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- responsive css  -->
+    <link rel="stylesheet" href="css/responsive.css">
     
   </head>
   <body>
@@ -47,13 +49,13 @@
                   </nav>
             </div>
             <div class="row banner-item align-items-center justify-content-between">
-                <div class="col-md-5">
+                <div class="col-md-5 ">
                     <h5>Are you ready to learn?</h5>
                     <h1>Learn With fun on <span>any schedule</span></h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cupiditate minima voluptatibus ratione officia officiis!</p>
-                    <a class="btn btn-style1 rounded-pill text-white px-4" href="">Get Started</a>
+                    <a class="btn btn-style1 rounded-pill text-white px-4 py-2" href="">Get Started</a>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 pt-md-0 pt-5">
                     <img class="img-fluid" src="images/banner.png" alt="">
                 </div>
             </div>
@@ -64,7 +66,7 @@
 <section class="book-section pt-5">
   <div class="container">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-3 col-6">
         <div class="books-item">
           <div class="book-img">
             <img class="img-fluid" src="images/book1.png" alt="">
@@ -73,7 +75,7 @@
           <p>Learn Anythings</p>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 col-6">
         <div class="books-item">
           <div class="book-img">
             <img class="img-fluid" src="images/book2.png" alt="">
@@ -82,7 +84,7 @@
           <p>Learn Anythings</p>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 col-6">
         <div class="books-item">
           <div class="book-img">
             <img class="img-fluid" src="images/book3.png" alt="">
@@ -91,7 +93,7 @@
           <p>Learn Anythings</p>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 col-6">
         <div class="books-item">
           <div class="book-img">
             <img class="img-fluid" src="images/book4.png" alt="">
@@ -105,15 +107,15 @@
 </section>
 <!-- book section end here  -->
 <!-- course section start here  -->
-<section class="course-section py-5 my-5">
+<section class="course-section py-lg-5 py-5 my-lg-5">
   <div class="container">
-    <div class="row pb-5 mb-4">
+    <div class="row pb-lg-5 mb-lg-4 pb-4">
       <div class="col text-center">
         <h1>Online Courses</h1>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-4">
+    <div class="row g-lg-3 gy-4">
+      <div class="col-lg-4 col-sm-6">
         <div class="courses-item">
           <div class="course-img">
             <img class="img-fluid" src="images/course1.png" alt="">
@@ -121,19 +123,19 @@
           <h2>Modern Psychology</h2>
           <p>Designation</p>
           <a class="btn rounded-pill btn-style px-4 text-white" href="">Buy Course</a>
-          <div class="row justify-content-between align-items-center pt-4 mt-2">
-            <div class="col-md-8 d-flex align-items-center">
+          <div class="row justify-content-between align-items-center pt-4 mt-2 g-lg-0 g-md-2">
+            <div class="col-8 d-flex align-items-center">
               <i class="far fa-calendar-alt pe-2"></i>
               <h3>Start 20 April, 2021</h3>
             </div>
-            <div class="col-md-4 d-flex align-items-center">
+            <div class="col-4 d-flex align-items-center">
               <i class="fas fa-user-friends pe-2"></i>
               <h3>60 seats</h3>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-lg-4 col-sm-6">
         <div class="courses-item">
           <div class="course-img">
             <img class="img-fluid" src="images/course2.png" alt="">
@@ -141,19 +143,19 @@
           <h2>Modern Psychology</h2>
           <p>Designation</p>
           <a class="btn rounded-pill btn-style px-4 text-white" href="">Buy Course</a>
-          <div class="row justify-content-between align-items-center pt-4 mt-2">
-            <div class="col-md-8 d-flex align-items-center">
+          <div class="row justify-content-between align-items-center pt-4 mt-2 g-lg-0 g-md-2">
+            <div class="col-8 d-flex align-items-center">
               <i class="far fa-calendar-alt pe-2"></i>
               <h3>Start 20 April, 2021</h3>
             </div>
-            <div class="col-md-4 d-flex align-items-center">
+            <div class="col-4 d-flex align-items-center">
               <i class="fas fa-user-friends pe-2"></i>
               <h3>60 seats</h3>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-lg-4 col-sm-6">
         <div class="courses-item">
           <div class="course-img">
             <img class="img-fluid" src="images/course3.png" alt="">
@@ -161,12 +163,12 @@
           <h2>Modern Psychology</h2>
           <p>Designation</p>
           <a class="btn rounded-pill btn-style px-4 text-white" href="">Buy Course</a>
-          <div class="row justify-content-between align-items-center pt-4 mt-2">
-            <div class="col-md-8 d-flex align-items-center">
+          <div class="row justify-content-between align-items-center pt-4 mt-2 g-lg-0 g-md-2">
+            <div class="col-8 d-flex align-items-center">
               <i class="far fa-calendar-alt pe-2"></i>
               <h3>Start 20 April, 2021</h3>
             </div>
-            <div class="col-md-4 d-flex align-items-center">
+            <div class="col-4 d-flex align-items-center">
               <i class="fas fa-user-friends pe-2"></i>
               <h3>60 seats</h3>
             </div>
@@ -178,22 +180,22 @@
 </section>
 <!-- course section end here  -->
 <!-- testimonial section start  -->
-<section class="testimonial-section py-5 my-5">
+<section class="testimonial-section py-lg-5 py-4 my-lg-5">
   <div class="container">
-    <div class="row pb-5 mb-4">
+    <div class="row pb-lg-5 pb-4 mb-lg-4">
       <div class="col text-center">
         <h1>Testimonial</h1>
       </div>
     </div>
     <div class="row">
-      <div class="col-8 m-auto">
+      <div class="col-xl-8 col-lg-9 m-auto">
         <div class="row align-items-center">
-          <div class="col-3">
-            <div class="testimonial-img">
+          <div class="col-md-3">
+            <div class="testimonial-img m-auto">
               <img class="img-fluid" src="images/profile.png" alt="">
             </div>
           </div>
-          <div class="col-9">
+          <div class="col-md-9 pt-md-0 pt-3">
             <p>There are many variations of passages of Lorem Ipsum available, but the
               majority have suffered alteration in some form, by injected humour, 
              or randomised words which don't look even slightly believable.</p>
@@ -205,13 +207,13 @@
 </section>
 <!-- testiomonial section end  -->
 <!-- footer start  -->
-<footer class="footer-section ">
+<footer class="footer-section mt-4">
   <div class="container">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-lg-4 col-12 pb-lg-0 pb-3">
         <p>Millions of people of all ages and from around the world are improving their lives with us</p>
       </div>
-      <div class="col-md-2 ms-auto">
+      <div class="col-xl-2 col-lg col-md-4 col-6 ms-xl-auto">
         <ul>
           <li><h2>Course</h2></li>
           <li><a href="">Graphic Design</a></li>
@@ -221,7 +223,7 @@
           <li><a href="">Engineering</a></li>
         </ul>
       </div>
-      <div class="col-md-2">
+      <div class="col-xl-2 col-lg col-md-4 col-6">
         <ul>
           <li><h2>Terms</h2></li>
           <li><a href="">Graphic Design</a></li>
@@ -231,7 +233,7 @@
           <li><a href="">Engineering</a></li>
         </ul>
       </div>
-      <div class="col-md-2">
+      <div class="col-xl-2 col-lg col-md-4 col-6 pt-md-0 pt-3">
         <ul>
           <li><h2>Useful Link</h2></li>
           <li><a href="">Graphic Design</a></li>
@@ -244,7 +246,7 @@
     </div>
     <div class="row">
       <div class="col">
-        <p class="text-center p-0 m-0 pt-5">Copyright © 2020 www.com</p>
+        <p class="text-center p-0 m-0 pt-5 mt-3">Copyright © 2020 www.com</p>
       </div>
     </div>
   </div>
