--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header-section">
         <div class="container">
             <div class="row pt-2">
-                <nav class="navbar navbar-expand-lg">
+                <nav class="navbar navbar-expand-lg navbar-light">
                     <div class="container-fluid">
                       <a class="navbar-brand banner-img" href="#"><img class="img-fluid" src="images/logo.png" alt=""></a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,7 @@
                             <a class="nav-link menu" href="#">Blog</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link btn rounded-pill btn-style text-white px-3 ms-2 py-2" href="#">Sign in</a>
+                            <a class="nav-link btn rounded-pill btn-style text-white px-3 ms-lg-2 py-2 mt-lg-0 mt-3" href="#">Sign in</a>
                           </li>
                         </ul>
                       </div>
