--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   </nav>
             </div>
             <div class="row banner-item align-items-center justify-content-between">
-                <div class="col-md-5 ">
+                <div class="col-md-5 pt-md-0 pt-3">
                     <h5>Are you ready to learn?</h5>
                     <h1>Learn With fun on <span>any schedule</span></h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cupiditate minima voluptatibus ratione officia officiis!</p>
