--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <!-- book section start here  -->
 <section class="book-section pt-5">
   <div class="container">
-    <div class="row">
+    <div class="row gy-4">
       <div class="col-md-3 col-6">
         <div class="books-item">
           <div class="book-img">
