--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
           <h2>Modern Psychology</h2>
           <p>Designation</p>
           <a class="btn rounded-pill btn-style px-4 text-white" href="">Buy Course</a>
-          <div class="row justify-content-between align-items-center pt-4 mt-2 g-lg-0 g-md-2">
+          <div class="row justify-content-between align-items-center pt-4 mt-2">
             <div class="col-8 d-flex align-items-center">
-              <i class="far fa-calendar-alt pe-2"></i>
-              <h3>Start 20 April, 2021</h3>
+              <i class="far fa-calendar-alt pe-1"></i>
+              <h3 class="">Start 20 April, 2021</h3>
             </div>
             <div class="col-4 d-flex align-items-center">
-              <i class="fas fa-user-friends pe-2"></i>
-              <h3>60 seats</h3>
+              <i class="fas fa-user-friends pe-1"></i>
+              <h3 class="">60 seats</h3>
             </div>
           </div>
         </div>
@@ -143,14 +143,14 @@
           <h2>Modern Psychology</h2>
           <p>Designation</p>
           <a class="btn rounded-pill btn-style px-4 text-white" href="">Buy Course</a>
-          <div class="row justify-content-between align-items-center pt-4 mt-2 g-lg-0 g-md-2">
+          <div class="row justify-content-between align-items-center pt-4 mt-2">
             <div class="col-8 d-flex align-items-center">
-              <i class="far fa-calendar-alt pe-2"></i>
-              <h3>Start 20 April, 2021</h3>
+              <i class="far fa-calendar-alt pe-1"></i>
+              <h3 class="">Start 20 April, 2021</h3>
             </div>
             <div class="col-4 d-flex align-items-center">
-              <i class="fas fa-user-friends pe-2"></i>
-              <h3>60 seats</h3>
+              <i class="fas fa-user-friends pe-1"></i>
+              <h3 class="">60 seats</h3>
             </div>
           </div>
         </div>
@@ -163,14 +163,14 @@
           <h2>Modern Psychology</h2>
           <p>Designation</p>
           <a class="btn rounded-pill btn-style px-4 text-white" href="">Buy Course</a>
-          <div class="row justify-content-between align-items-center pt-4 mt-2 g-lg-0 g-md-2">
+          <div class="row justify-content-between align-items-center pt-4 mt-2">
             <div class="col-8 d-flex align-items-center">
-              <i class="far fa-calendar-alt pe-2"></i>
-              <h3>Start 20 April, 2021</h3>
+              <i class="far fa-calendar-alt pe-1"></i>
+              <h3 class="">Start 20 April, 2021</h3>
             </div>
             <div class="col-4 d-flex align-items-center">
-              <i class="fas fa-user-friends pe-2"></i>
-              <h3>60 seats</h3>
+              <i class="fas fa-user-friends pe-1"></i>
+              <h3 class="">60 seats</h3>
             </div>
           </div>
         </div>
