--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>E-School Website</title>
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <!-- fontawesome link  -->
     <script src="https://kit.fontawesome.com/20bb288a86.js" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
