--- a/index.html
+++ b/index.html
@@ -22,30 +22,28 @@
         <div class="container">
             <div class="row pt-2">
                 <nav class="navbar navbar-expand-lg navbar-light">
-                    <div class="container-fluid">
-                      <a class="navbar-brand banner-img" href="#"><img class="img-fluid" src="images/logo.png" alt=""></a>
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                          <li class="nav-item">
-                            <a class="nav-link menu" aria-current="page" href="#">Books</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link menu" href="#">Courses</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link menu" href="#">Others</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link menu" href="#">Blog</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link btn rounded-pill btn-style text-white px-3 ms-lg-2 py-2 mt-lg-0 mt-3" href="#">Sign in</a>
-                          </li>
-                        </ul>
-                      </div>
+                    <a class="navbar-brand banner-img" href="#"><img class="img-fluid" src="images/logo.png" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item me-lg-2">
+                          <a class="nav-link menu" aria-current="page" href="#">Books</a>
+                        </li>
+                        <li class="nav-item mx-lg-2">
+                          <a class="nav-link menu" href="#">Courses</a>
+                        </li>
+                        <li class="nav-item mx-lg-2">
+                          <a class="nav-link menu" href="#">Others</a>
+                        </li>
+                        <li class="nav-item mx-lg-2">
+                          <a class="nav-link menu" href="#">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link btn rounded-pill btn-style text-white px-4 ms-lg-2 py-2 mt-lg-0 mt-3" href="#">Sign in</a>
+                        </li>
+                      </ul>
                     </div>
                   </nav>
             </div>
