modified some effects

--- a/index.html
+++ b/index.html
@@ -210,36 +210,37 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-4 col-12 pb-lg-0 pb-3">
+        <img class="img-fluid w-50 mb-4" src="images/footer-logo.png" alt="">
         <p>Millions of people of all ages and from around the world are improving their lives with us</p>
       </div>
       <div class="col-xl-2 col-lg col-md-4 col-6 ms-xl-auto">
         <ul>
-          <li><h2>Course</h2></li>
-          <li><a href="">Graphic Design</a></li>
-          <li><a href="">Web Design</a></li>
-          <li><a href="">Business</a></li>
-          <li><a href="">Marketing</a></li>
-          <li><a href="">Engineering</a></li>
+          <li class="mb-2"><h2>Course</h2></li>
+          <li class="mb-1"><a href="">Graphic Design</a></li>
+          <li class="mb-1"><a href="">Web Design</a></li>
+          <li class="mb-1"><a href="">Business</a></li>
+          <li class="mb-1"><a href="">Marketing</a></li>
+          <li class="mb-1"><a href="">Engineering</a></li>
         </ul>
       </div>
       <div class="col-xl-2 col-lg col-md-4 col-6">
         <ul>
-          <li><h2>Terms</h2></li>
-          <li><a href="">Graphic Design</a></li>
-          <li><a href="">Web Design</a></li>
-          <li><a href="">Business</a></li>
-          <li><a href="">Marketing</a></li>
-          <li><a href="">Engineering</a></li>
+          <li class="mb-2"><h2>Terms</h2></li>
+          <li class="mb-1"><a href="">Graphic Design</a></li>
+          <li class="mb-1"><a href="">Web Design</a></li>
+          <li class="mb-1"><a href="">Business</a></li>
+          <li class="mb-1"><a href="">Marketing</a></li>
+          <li class="mb-1"><a href="">Engineering</a></li>
         </ul>
       </div>
       <div class="col-xl-2 col-lg col-md-4 col-6 pt-md-0 pt-3">
         <ul>
-          <li><h2>Useful Link</h2></li>
-          <li><a href="">Graphic Design</a></li>
-          <li><a href="">Web Design</a></li>
-          <li><a href="">Business</a></li>
-          <li><a href="">Marketing</a></li>
-          <li><a href="">Engineering</a></li>
+          <li class="mb-2 class="mb-2""><h2>Useful Link</h2></li>
+          <li class="mb-1"><a href="">Graphic Design</a></li>
+          <li class="mb-1"><a href="">Web Design</a></li>
+          <li class="mb-1"><a href="">Business</a></li>
+          <li class="mb-1"><a href="">Marketing</a></li>
+          <li class="mb-1"><a href="">Engineering</a></li>
         </ul>
       </div>
     </div>
